force-app/main/default/objects/Payment_follow_up__c/Payment_follow_up__c.object-meta.xml
<CustomObject>
    <label>Payment follow up</label>
    <nameField>
        <displayFormat>PAYMENT FOLLOW UP - {000000}</displayFormat>
        <label>Payment follow up Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment follow up</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>