force-app/main/default/objects/Payment_follow_up__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment follow up</relationshipLabel>
    <relationshipName>Payment_follow_up</relationshipName>
    <type>Lookup</type>
</CustomField>