force-app/main/default/objects/Payment_follow_up__c/fields/lead__c.field-meta.xml
<CustomField>
    <fullName>lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Payment follow up</relationshipLabel>
    <relationshipName>Payment_follow_up</relationshipName>
    <type>Lookup</type>
</CustomField>