force-app/main/default/objects/Payment_follow_up__c/fields/Other_visit__c.field-meta.xml
<CustomField>
    <fullName>Other_visit__c</fullName>
    <label>Other visit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>