force-app/main/default/objects/Payment_follow_up__c/fields/Owner_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profile_Name__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Name</label>
    <type>Text</type>
</CustomField>