force-app/main/default/objects/Payment_follow_up__c/fields/Owner_State__c.field-meta.xml
<CustomField>
    <fullName>Owner_State__c</fullName>
    <formula>Text(Owner:User.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner State</label>
    <type>Text</type>
</CustomField>