force-app/main/default/objects/Payment_follow_up__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Payment follow up</relationshipLabel>
    <relationshipName>Payment_follow_up</relationshipName>
    <type>Lookup</type>
</CustomField>